--- a/style.css
+++ b/style.css
@@ -10,16 +10,18 @@
 {
     width: 900px;
     margin: auto;
-    border:2px solid black;/*bordure à retirer*/
+    /*bordure à retirer*/
 }
 
 h1 { 
-	font-size: 1.1em;
+	font-size: 1em;
 	margin-block-end: 0;
+    font-family:Raleway-VariableFont_wght;
  }
 
  p {
  	font-size: 0.8em;
+    font-family:Raleway-VariableFont_wght;
  }
 
 /*header*/
@@ -51,7 +53,8 @@ form p input{
     border-right: none;
 	padding: 10px;
     font-weight: bold;
-    font-size: 0.8em
+    font-size: 0.8em;
+    font-family:Raleway-VariableFont_wght;
 	
 }
 form p input label{
@@ -76,6 +79,7 @@ p button:hover {
     cursor: pointer;
     font-weight: bold;
     font-size: 0.8em;
+    font-family:Raleway-VariableFont_wght;
 }
 
 label {
@@ -96,19 +100,27 @@ nav ul
 
 }
 
-nav li
+nav li:first-child
+{
+    margin-right: 50px;
+}
+nav li:nth-child(2)
 {
     margin-right: 50px;
 }
 
 nav a
 {
-    font-size: 1.0em;
+    font-size: 0.7em;
     color: #181818;
     padding-bottom: 3px;
     text-decoration: none;
+    font-family:Raleway-VariableFont_wght;
 }
-
+span {
+    font-weight: bold;
+    color:#0065FC;
+}
 nav a:hover
 {
     color: #0065FC;
@@ -136,22 +148,28 @@ nav a:hover
     font-weight: bold;
     font-size: 0.8em;
     border-left: none;
+    margin-right: 20px;
+    font-family:Raleway-VariableFont_wght;
+    font-weight: bold;
 }
 
-#filtres li {
+#filtres li:first-child {
     margin-right: 20px;
     font-weight: bold;
     font-size: 0.8em;
-    
+    padding-top: 5px;
+    font-family:Raleway-VariableFont_wght;
 }
+
 
 #filtres p {
     margin-top: 30px;
+    font-family:Raleway-VariableFont_wght;
 }
 
 #filtres .fas {
     color : #0065FC;
-    padding: 7.5px;
+    padding: 8px 7.5px 7.5px 7.5px;
     border:1px solid #DEEBFF;
     border-radius: 100%;
     background: #DEEBFF;
@@ -160,4 +178,136 @@ nav a:hover
     font-size: 0.8em;
     text-align: center;
 
+}
+
+#filtres p .fas {
+    color : #0065FC;
+    padding: 5px 7px 5px 7px;
+    border:1px solid #DEEBFF;
+    border-radius: 100%;
+    background: #FFF;
+    margin-right: 5px;
+    margin-left: 0;
+    font-size: 0.7em;
+
+}
+
+/*section*/
+
+section {
+    display:flex;
+    
+}
+#hebergement {
+    border:2px solid #F2F2F2;
+    padding: 0 12px 0 12px;
+    background-color: #F2F2F2;
+    border-radius: 15px;
+    margin-top: 15px; 
+    width: 65%;
+}
+
+#populaires {
+    display:flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background-color: #F2F2F2;
+    border:2px solid #F2F2F2;
+    border-radius: 15px;
+    margin-top: 15px;
+    padding: 0 17px 5px 17px;
+    
+}
+
+.premiere_img {
+    display:flex;
+    justify-content: space-around;
+    border-radius: 15px;
+    font-size: 0.8em;
+}
+.premiere_img h6{
+    border:1px solid #FFF;
+    border-radius: 15px;
+    height: 130px;
+    width: 160px;
+    text-align: center;
+    margin-right: 0;
+    background-color: #FFF;
+}
+
+.deuxieme_img {
+    display:flex;
+    justify-content: space-around;
+    border-radius: 15px;
+    font-size: 0.8em;
+    
+}
+.deuxieme_img h6{
+    border:1px solid #FFF;
+    border-radius: 15px;
+    height: 130px;
+    width: 160px;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 1px;
+    background-color: #FFF;
+}
+
+#hebergement p a {
+    font-size:0.8em;
+    font-weight: bold;
+    text-decoration: none;
+    color:black;
+}
+#hebergement p {
+    margin-left: 5px;
+}
+
+#populaires h6 {
+    border:1px solid #FFF;
+    border-radius: 15px;
+    height: 90px;
+    width: 220px;
+    text-align: center;
+    margin-right: 5px;
+    margin-top: 5px; 
+    margin-bottom: 10px;
+    background-color: #FFF;
+}
+
+#populaires h1 {
+    padding-bottom: 13px;
+}
+
+section {
+    display:flex;
+    justify-content: space-between;
+}
+/*deuxieme section*/
+
+/*footer*/
+#activites {
+    display:flex;
+}
+footer {
+    display:flex;
+    background-color: #F2F2F2;
+    padding: 15px;
+}
+
+#a_propos {
+    display:flex;
+    flex-direction: column;
+    padding: 15px;
+    margin-right: 120px;
+}
+
+#a_propos h1 {
+    font-size: 0.8em;
+}
+
+#a_propos a {
+    text-decoration: none;
+    color:black;
+    font-size:0.8em;
 }
