--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ formulaire button:hover {
     font-weight: bold;
     font-size: 0.8em;
     font-family:Raleway-VariableFont_wght;
+
 }
 
 label {
@@ -173,7 +174,7 @@ nav a:hover
     font-size: 0.8em;
     padding-top: 5px;
     font-family:Raleway-VariableFont_wght;
-    padding-top: 25px;
+    padding-top: 20px;
 }
 
 
@@ -214,11 +215,11 @@ p .fas {
 }
 
 #hebergement {
-    border:2px solid #F2F2F2;
     padding: 0 12px 0 12px;
     background-color: #F2F2F2;
     border-radius: 15px;
     margin-top: 20px;
+    margin-right: 40px;
 }
 #hebergement h1 {
     margin:30px 0 15px 15px;
@@ -228,127 +229,171 @@ p .fas {
     display:flex;
     justify-content: space-around;
 }
-.premiere_img img {
-    border:1px solid #FFF;
+.first img {
     border-radius: 15px 15px 0 0;
     height: 80px;
-    width: 170px;
-    margin:2px;
+    width: 180px;
+    margin:1px;
     background-color: #FFF;
 }
-.premiere_img p {
-    border:2px solid #FFF;
+.premiere_img .first {
     border-radius: 15px;
-    box-shadow: 0  5px 10px 0 black;
+    padding: 2px;
+    box-shadow: 1px 1px 8px #555;
     background-color: #FFF;
-    height: 160px;
+    height: 150px;
 }
-
+.premiere_img .fas, .far{
+   border:none;
+   padding: 0;
+   margin: 0;
+   font-size:0.8em;
+}
 .deuxieme_img {
     display:flex;
     justify-content: space-around;
     border-radius: 15px;
-    font-size: 0.8em;
     margin-top: 15px;  
 }
 
-.deuxieme_img img{
-    border:1px solid #FFF;
-    border-radius: 15px 15px 0 0;
-    height: 80px;
-    width: 170px;
-    margin:2px;
+.deuxieme_img .first {
+    border-radius: 15px;
+    padding: 2px;
+    box-shadow: 1px 1px 8px #555;
     background-color: #FFF;
+    height: 150px;
 }
 
-.deuxieme_img p {
-    border:2px solid #FFF;
-    border-radius: 15px;
-    box-shadow: 0  5px 10px 0 black;
-    background-color: #FFF;
-    height: 160px;
+.deuxieme_img .fas, .far{
+   border:none;
+   padding: 0;
+   margin: 0;
+   font-size: 0.8em;
 }
 
 #hebergement p a {
-    font-size:0.8em;
+    font-size:1em;
     font-weight: bold;
     text-decoration: none;
     color:black;
+    margin-left: 15px;
 }
 
-#hebergement p {
+#hebergement .first {
     margin: 0 15px 15px 15px;
 }
+
+.first p {
+    margin-top: 2px;
+    margin-left: 10px;
+    font-size: 0.7em;
+}
+.first span {
+    font-weight: bold;
+    margin-left: 10px;
+    font-size: 0.9em;
+    font-family:Raleway-VariableFont_wght;
+}
+
 /* aside */
+
 aside {
-    margin-top: 4px;
-}
-
-#populaires {  
     background-color: #F2F2F2;
-    border:2px solid #F2F2F2;
     border-radius: 15px;
-    margin-top: 15px;
-    padding: 0 20px 20px 20px;
+    margin-top: 20px;
+    padding: 0 20px 0 20px;
 }
 
-#populaires img {
-    border:1px solid #FFF;
+#populaires h1 .fas {
+    margin-left: 80px;
+    color:black;
+}
+.second img {
     border-radius: 15px 0 0px 15px;
     height: 100px;
     width: 100px;
-    margin:2px;
     background-color: #FFF;
+    margin:2px;
+    
 }
-#populaires p {
-    border:2px solid #FFF;
+.second {
+    display:flex;
+}
+.second p,span {
+    margin-top: 3px;
+}
+.second .fas, .far{
+   border:none;
+   padding: 0;
+   margin: 0;
+   font-size: 0.8em;
+}
+
+#populaires .second {
     border-radius: 15px;
-    box-shadow: 0  5px 10px 0 black;
+    box-shadow: 1px 1px 8px #555;
     background-color: #FFF;
     width: 250px;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
+
 }
 #populaires h1 {
-    margin:30px 0 15px 5px;
+    margin:17px 0 15px 5px;
+    padding-top: 20px;
 }
 
 #section_1 {
     display:flex;
     justify-content: space-between;
 }
+
+
 /*section_2*/
+
 #section_2 {
     margin-top: 30px;
     margin-bottom: 30px;
+}
+
+#section_2 h1 {
+    margin-bottom: 20px;
 }
 #activites {
     display:flex;
 }
 .vertical img {
-    height: 260px;
-    width: 200px;
-    border-radius: 15px 15px 0 0;
-}
-.vertical p {
-    background-color: #fff;
-    border:2px solid #fff;
-    border-radius: 15px;
-    box-shadow: 0  5px 10px 0 black;
     height: 300px;
+    width: 220px;
+    border-radius: 15px 15px 0 0;
+    margin-bottom: 9px;
+}
+.vertical .titre_2 { 
+    border-radius: 15px;
+    box-shadow: 1px 1px 8px #555;
+    height: 340px;
     margin-right: 40px;
 }
 .double img {
-    height: 100px;
+    height: 120px;
     width: 220px;
     border-radius: 15px 15px 0 0;
+    margin-bottom: 8px;
 }
-.double p {
-    background-color: #fff;
+.double .titre_2 { 
     border-radius: 15px;
-    box-shadow: 0  5px 10px 0 black;
-    height: 140px;
+    box-shadow: 1px 1px 8px #555;
+    height: 160px;
+    margin-bottom: 20px;
     margin-right: 40px;
 }
+
+.titre_2 span {
+    font-weight: bold;
+    margin-left: 15px;
+    font-size: 0.9em;
+    font-family:Raleway-VariableFont_wght;
+}
+
 /*footer*/
 
 footer {
@@ -376,7 +421,17 @@ footer {
 
 /* responsive */
 
-@media (max-width:980px) {
+@media (max-width:576px) {
+    #titre_principal p {
+        margin-top: 10px;
+    }
+    #titre_principal h1 {
+        width: 70%;
+    }
+    nav ul {
+        display: flex;
+        flex-direction: column;
+    }
     #filtres {
         flex-direction: column;
     }
@@ -384,6 +439,7 @@ footer {
         flex-wrap: wrap;
     }
     #filtres ul li {
+        margin-bottom: 10px;
         width: 50%;
     }
 
@@ -393,9 +449,74 @@ footer {
 
     #filtres li:first-child {
         margin-right: 0;
-        width: 35%;
+        width: 15%;
     }
     #filtres li:first-child a {
         margin-right: 0;
+    }
+    #filtres span{
+        padding-top: 5px;
+    }
+    #section_1 {
+
+    display:flex;
+    flex-direction: column-reverse;
+    }
+    .premiere_img {
+    display:flex;
+    flex-direction: column;
+    width: 29.5%;
+    }
+    .premiere_img img {
+        width: 100%;
+    }
+    .deuxieme_img {
+        display:flex;
+        flex-direction: column;
+        width: 29.5%;
+    }
+    .deuxieme_img img {
+        width: 100%;
+    }
+    #hebergement {
+        background-color: #fff;
+    }
+    aside {
+        width: 27%;
+        border-radius: 0;
+    }
+    #activites {
+        display: flex;
+        flex-direction: column;
+    }
+    .vertical img {
+        height: 120px;
+        width: 100%;
+    }
+    .double img {
+        width: 100%;
+    }
+    .vertical .titre_2{
+    height: 160px;
+    width: 220px;
+    width: 25%;
+    margin-left: 20px;
+    }
+    .double .titre_2 {
+    height: 160px;
+    width: 25%;
+    margin-top: 20px;
+    margin-left: 20px;
+    }
+    #section_2 h1 {
+    margin-left: 20px;
+    }
+    footer {
+    display:flex;
+    flex-direction: column;
+    width: 28%;
+    }
+    header {
+        width: 50%;
     }
 }
