--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@
     width: 980px;
     margin: auto;
 }
-
+body { 
+    font-family:Raleway-VariableFont_wght;
+}
 h1 { 
 	font-size: 1em;
     font-family:Raleway-VariableFont_wght;
@@ -333,7 +335,7 @@ aside {
     color:black;
 }
 #populaires h3 .fas {
-    margin-left: 80px;
+    margin-left: 70px;
     color:black;
 }
 .second img {
@@ -371,6 +373,7 @@ aside {
     background-color: #FFF;
     width: 250px;
     margin-bottom: 25px;
+    font-size: 14px;
 
 }
 .soleil {
@@ -382,6 +385,7 @@ aside {
 #populaires h3 {
     margin:17px 0 15px 5px;
     padding-top: 20px;
+    display:flex;
 
 }
 
